chii_parser.js
module.exports = (function(){
  /* Generated by PEG.js 0.6.2 (http://pegjs.majda.cz/). */
  
  var result = {
    /*
     * Parses the input with a generated parser. If the parsing is successfull,
     * returns a value explicitly or implicitly specified by the grammar from
     * which the parser was generated (see |PEG.buildParser|). If the parsing is
     * unsuccessful, throws |PEG.parser.SyntaxError| describing the error.
     */
    parse: function(input, startRule) {
      var parseFunctions = {
        "argument_declaration": parse_argument_declaration,
        "argument_declaration_list": parse_argument_declaration_list,
        "argument_declaration_list_noparens": parse_argument_declaration_list_noparens,
        "body_statement": parse_body_statement,
        "body_statements": parse_body_statements,
        "body_statements_internal": parse_body_statements_internal,
        "character_literal": parse_character_literal,
        "decimal": parse_decimal,
        "expression": parse_expression,
        "function_call": parse_function_call,
        "function_declaration": parse_function_declaration,
        "function_definition": parse_function_definition,
        "identifier": parse_identifier,
        "integer": parse_integer,
        "real": parse_real,
        "sp": parse_sp,
        "storage_class_keyword": parse_storage_class_keyword,
        "storage_classes": parse_storage_classes,
        "strchar": parse_strchar,
        "string_literal": parse_string_literal,
        "symbol": parse_symbol,
        "top_statement": parse_top_statement,
        "top_statements": parse_top_statements,
        "type": parse_type,
        "type_constructor": parse_type_constructor,
        "type_constructor_keyword": parse_type_constructor_keyword,
        "type_modifier": parse_type_modifier,
        "type_modifiers": parse_type_modifiers,
        "type_modifiers_internal": parse_type_modifiers_internal,
        "typename": parse_typename,
        "value_list": parse_value_list,
        "value_list_noparens": parse_value_list_noparens,
        "variable_declaration": parse_variable_declaration,
        "variable_definition": parse_variable_definition,
        "variable_keyword": parse_variable_keyword
      };
      
      if (startRule !== undefined) {
        if (parseFunctions[startRule] === undefined) {
          throw new Error("Invalid rule name: " + quote(startRule) + ".");
        }
      } else {
        startRule = "top_statements";
      }
      
      var pos = 0;
      var reportMatchFailures = true;
      var rightmostMatchFailuresPos = 0;
      var rightmostMatchFailuresExpected = [];
      var cache = {};
      
      function padLeft(input, padding, length) {
        var result = input;
        
        var padLength = length - input.length;
        for (var i = 0; i < padLength; i++) {
          result = padding + result;
        }
        
        return result;
      }
      
      function escape(ch) {
        var charCode = ch.charCodeAt(0);
        
        if (charCode <= 0xFF) {
          var escapeChar = 'x';
          var length = 2;
        } else {
          var escapeChar = 'u';
          var length = 4;
        }
        
        return '\\' + escapeChar + padLeft(charCode.toString(16).toUpperCase(), '0', length);
      }
      
      function quote(s) {
        /*
         * ECMA-262, 5th ed., 7.8.4: All characters may appear literally in a
         * string literal except for the closing quote character, backslash,
         * carriage return, line separator, paragraph separator, and line feed.
         * Any character may appear in the form of an escape sequence.
         */
        return '"' + s
          .replace(/\\/g, '\\\\')            // backslash
          .replace(/"/g, '\\"')              // closing quote character
          .replace(/\r/g, '\\r')             // carriage return
          .replace(/\n/g, '\\n')             // line feed
          .replace(/[\x80-\uFFFF]/g, escape) // non-ASCII characters
          + '"';
      }
      
      function matchFailed(failure) {
        if (pos < rightmostMatchFailuresPos) {
          return;
        }
        
        if (pos > rightmostMatchFailuresPos) {
          rightmostMatchFailuresPos = pos;
          rightmostMatchFailuresExpected = [];
        }
        
        rightmostMatchFailuresExpected.push(failure);
      }
      
      function parse_top_statements() {
        var cacheKey = 'top_statements@' + pos;
        var cachedResult = cache[cacheKey];
        if (cachedResult) {
          pos = cachedResult.nextPos;
          return cachedResult.result;
        }
        
        var savedReportMatchFailures = reportMatchFailures;
        reportMatchFailures = false;
        var savedPos0 = pos;
        var savedPos1 = pos;
        var result3 = parse_top_statement();
        if (result3 !== null) {
          var savedPos2 = pos;
          var result6 = [];
          var result8 = parse_sp();
          while (result8 !== null) {
            result6.push(result8);
            var result8 = parse_sp();
          }
          if (result6 !== null) {
            var result7 = parse_top_statements();
            if (result7 !== null) {
              var result5 = [result6, result7];
            } else {
              var result5 = null;
              pos = savedPos2;
            }
          } else {
            var result5 = null;
            pos = savedPos2;
          }
          var result4 = result5 !== null ? result5 : '';
          if (result4 !== null) {
            var result1 = [result3, result4];
          } else {
            var result1 = null;
            pos = savedPos1;
          }
        } else {
          var result1 = null;
          pos = savedPos1;
        }
        var result2 = result1 !== null
          ? (function(stmt, opt) {
                 var more = opt[1];
          
                  if (more !== undefined)
                  {
                      more.unshift(stmt);
                      return more;
                  }
          
                  return [stmt];
              })(result1[0], result1[1])
          : null;
        if (result2 !== null) {
          var result0 = result2;
        } else {
          var result0 = null;
          pos = savedPos0;
        }
        reportMatchFailures = savedReportMatchFailures;
        if (reportMatchFailures && result0 === null) {
          matchFailed("top-level statements");
        }
        
        cache[cacheKey] = {
          nextPos: pos,
          result:  result0
        };
        return result0;
      }
      
      function parse_top_statement() {
        var cacheKey = 'top_statement@' + pos;
        var cachedResult = cache[cacheKey];
        if (cachedResult) {
          pos = cachedResult.nextPos;
          return cachedResult.result;
        }
        
        
        var savedPos5 = pos;
        var savedPos6 = pos;
        var result17 = parse_variable_declaration();
        if (result17 !== null) {
          if (input.substr(pos, 1) === ";") {
            var result18 = ";";
            pos += 1;
          } else {
            var result18 = null;
            if (reportMatchFailures) {
              matchFailed("\";\"");
            }
          }
          if (result18 !== null) {
            var result15 = [result17, result18];
          } else {
            var result15 = null;
            pos = savedPos6;
          }
        } else {
          var result15 = null;
          pos = savedPos6;
        }
        var result16 = result15 !== null
          ? (function(stmt) { return stmt; })(result15[0])
          : null;
        if (result16 !== null) {
          var result14 = result16;
        } else {
          var result14 = null;
          pos = savedPos5;
        }
        if (result14 !== null) {
          var result0 = result14;
        } else {
          var savedPos3 = pos;
          var savedPos4 = pos;
          var result12 = parse_variable_definition();
          if (result12 !== null) {
            if (input.substr(pos, 1) === ";") {
              var result13 = ";";
              pos += 1;
            } else {
              var result13 = null;
              if (reportMatchFailures) {
                matchFailed("\";\"");
              }
            }
            if (result13 !== null) {
              var result10 = [result12, result13];
            } else {
              var result10 = null;
              pos = savedPos4;
            }
          } else {
            var result10 = null;
            pos = savedPos4;
          }
          var result11 = result10 !== null
            ? (function(stmt) { return stmt; })(result10[0])
            : null;
          if (result11 !== null) {
            var result9 = result11;
          } else {
            var result9 = null;
            pos = savedPos3;
          }
          if (result9 !== null) {
            var result0 = result9;
          } else {
            var savedPos1 = pos;
            var savedPos2 = pos;
            var result7 = parse_function_declaration();
            if (result7 !== null) {
              if (input.substr(pos, 1) === ";") {
                var result8 = ";";
                pos += 1;
              } else {
                var result8 = null;
                if (reportMatchFailures) {
                  matchFailed("\";\"");
                }
              }
              if (result8 !== null) {
                var result5 = [result7, result8];
              } else {
                var result5 = null;
                pos = savedPos2;
              }
            } else {
              var result5 = null;
              pos = savedPos2;
            }
            var result6 = result5 !== null
              ? (function(stmt) { return stmt; })(result5[0])
              : null;
            if (result6 !== null) {
              var result4 = result6;
            } else {
              var result4 = null;
              pos = savedPos1;
            }
            if (result4 !== null) {
              var result0 = result4;
            } else {
              var savedPos0 = pos;
              var result2 = parse_function_definition();
              var result3 = result2 !== null
                ? (function(stmt) { return stmt; })(result2)
                : null;
              if (result3 !== null) {
                var result1 = result3;
              } else {
                var result1 = null;
                pos = savedPos0;
              }
              if (result1 !== null) {
                var result0 = result1;
              } else {
                var result0 = null;;
              };
            };
          };
        }
        
        
        
        cache[cacheKey] = {
          nextPos: pos,
          result:  result0
        };
        return result0;
      }
      
      function parse_function_declaration() {
        var cacheKey = 'function_declaration@' + pos;
        var cachedResult = cache[cacheKey];
        if (cachedResult) {
          pos = cachedResult.nextPos;
          return cachedResult.result;
        }
        
        
        var savedPos0 = pos;
        var savedPos1 = pos;
        if (input.substr(pos, 3) === "$fn") {
          var result3 = "$fn";
          pos += 3;
        } else {
          var result3 = null;
          if (reportMatchFailures) {
            matchFailed("\"$fn\"");
          }
        }
        if (result3 !== null) {
          var result14 = parse_sp();
          if (result14 !== null) {
            var result4 = [];
            while (result14 !== null) {
              result4.push(result14);
              var result14 = parse_sp();
            }
          } else {
            var result4 = null;
          }
          if (result4 !== null) {
            var result5 = parse_identifier();
            if (result5 !== null) {
              var result6 = [];
              var result13 = parse_sp();
              while (result13 !== null) {
                result6.push(result13);
                var result13 = parse_sp();
              }
              if (result6 !== null) {
                var result7 = parse_argument_declaration_list();
                if (result7 !== null) {
                  var savedPos2 = pos;
                  var result10 = [];
                  var result12 = parse_sp();
                  while (result12 !== null) {
                    result10.push(result12);
                    var result12 = parse_sp();
                  }
                  if (result10 !== null) {
                    var result11 = parse_type();
                    if (result11 !== null) {
                      var result9 = [result10, result11];
                    } else {
                      var result9 = null;
                      pos = savedPos2;
                    }
                  } else {
                    var result9 = null;
                    pos = savedPos2;
                  }
                  var result8 = result9 !== null ? result9 : '';
                  if (result8 !== null) {
                    var result1 = [result3, result4, result5, result6, result7, result8];
                  } else {
                    var result1 = null;
                    pos = savedPos1;
                  }
                } else {
                  var result1 = null;
                  pos = savedPos1;
                }
              } else {
                var result1 = null;
                pos = savedPos1;
              }
            } else {
              var result1 = null;
              pos = savedPos1;
            }
          } else {
            var result1 = null;
            pos = savedPos1;
          }
        } else {
          var result1 = null;
          pos = savedPos1;
        }
        var result2 = result1 !== null
          ? (function(name, args, opt) {
                  var retnType = opt[1];
                  var fn = { type: 'function-declaration', name: name, args: args };
          
                  if (retnType !== undefined)
                  {
                      fn.retnType = retnType;
                  }
          
                  return fn;
              })(result1[2], result1[4], result1[5])
          : null;
        if (result2 !== null) {
          var result0 = result2;
        } else {
          var result0 = null;
          pos = savedPos0;
        }
        
        
        
        cache[cacheKey] = {
          nextPos: pos,
          result:  result0
        };
        return result0;
      }
      
      function parse_function_definition() {
        var cacheKey = 'function_definition@' + pos;
        var cachedResult = cache[cacheKey];
        if (cachedResult) {
          pos = cachedResult.nextPos;
          return cachedResult.result;
        }
        
        
        var savedPos0 = pos;
        var savedPos1 = pos;
        var result3 = parse_function_declaration();
        if (result3 !== null) {
          var result4 = [];
          var result6 = parse_sp();
          while (result6 !== null) {
            result4.push(result6);
            var result6 = parse_sp();
          }
          if (result4 !== null) {
            var result5 = parse_body_statements();
            if (result5 !== null) {
              var result1 = [result3, result4, result5];
            } else {
              var result1 = null;
              pos = savedPos1;
            }
          } else {
            var result1 = null;
            pos = savedPos1;
          }
        } else {
          var result1 = null;
          pos = savedPos1;
        }
        var result2 = result1 !== null
          ? (function(fn, body) {
                  fn.type = 'function-definition';
                  fn.body = body;
          
                  return fn;
              })(result1[0], result1[2])
          : null;
        if (result2 !== null) {
          var result0 = result2;
        } else {
          var result0 = null;
          pos = savedPos0;
        }
        
        
        
        cache[cacheKey] = {
          nextPos: pos,
          result:  result0
        };
        return result0;
      }
      
      function parse_argument_declaration_list() {
        var cacheKey = 'argument_declaration_list@' + pos;
        var cachedResult = cache[cacheKey];
        if (cachedResult) {
          pos = cachedResult.nextPos;
          return cachedResult.result;
        }
        
        
        var savedPos6 = pos;
        var savedPos7 = pos;
        if (input.substr(pos, 1) === "(") {
          var result40 = "(";
          pos += 1;
        } else {
          var result40 = null;
          if (reportMatchFailures) {
            matchFailed("\"(\"");
          }
        }
        if (result40 !== null) {
          var result41 = [];
          var result43 = parse_sp();
          while (result43 !== null) {
            result41.push(result43);
            var result43 = parse_sp();
          }
          if (result41 !== null) {
            if (input.substr(pos, 1) === ")") {
              var result42 = ")";
              pos += 1;
            } else {
              var result42 = null;
              if (reportMatchFailures) {
                matchFailed("\")\"");
              }
            }
            if (result42 !== null) {
              var result38 = [result40, result41, result42];
            } else {
              var result38 = null;
              pos = savedPos7;
            }
          } else {
            var result38 = null;
            pos = savedPos7;
          }
        } else {
          var result38 = null;
          pos = savedPos7;
        }
        var result39 = result38 !== null
          ? (function() {
                  return {
                      type: 'argument-declaration-list',
                      args: [], variadic: false
                  };
              })()
          : null;
        if (result39 !== null) {
          var result37 = result39;
        } else {
          var result37 = null;
          pos = savedPos6;
        }
        if (result37 !== null) {
          var result0 = result37;
        } else {
          var savedPos4 = pos;
          var savedPos5 = pos;
          if (input.substr(pos, 1) === "(") {
            var result30 = "(";
            pos += 1;
          } else {
            var result30 = null;
            if (reportMatchFailures) {
              matchFailed("\"(\"");
            }
          }
          if (result30 !== null) {
            var result31 = [];
            var result36 = parse_sp();
            while (result36 !== null) {
              result31.push(result36);
              var result36 = parse_sp();
            }
            if (result31 !== null) {
              var result32 = parse_argument_declaration_list_noparens();
              if (result32 !== null) {
                var result33 = [];
                var result35 = parse_sp();
                while (result35 !== null) {
                  result33.push(result35);
                  var result35 = parse_sp();
                }
                if (result33 !== null) {
                  if (input.substr(pos, 1) === ")") {
                    var result34 = ")";
                    pos += 1;
                  } else {
                    var result34 = null;
                    if (reportMatchFailures) {
                      matchFailed("\")\"");
                    }
                  }
                  if (result34 !== null) {
                    var result28 = [result30, result31, result32, result33, result34];
                  } else {
                    var result28 = null;
                    pos = savedPos5;
                  }
                } else {
                  var result28 = null;
                  pos = savedPos5;
                }
              } else {
                var result28 = null;
                pos = savedPos5;
              }
            } else {
              var result28 = null;
              pos = savedPos5;
            }
          } else {
            var result28 = null;
            pos = savedPos5;
          }
          var result29 = result28 !== null
            ? (function(args) {
                    return {
                        type: 'argument-declaration-list',
                        args: args, variadic: false
                    };
                })(result28[2])
            : null;
          if (result29 !== null) {
            var result27 = result29;
          } else {
            var result27 = null;
            pos = savedPos4;
          }
          if (result27 !== null) {
            var result0 = result27;
          } else {
            var savedPos2 = pos;
            var savedPos3 = pos;
            if (input.substr(pos, 1) === "(") {
              var result20 = "(";
              pos += 1;
            } else {
              var result20 = null;
              if (reportMatchFailures) {
                matchFailed("\"(\"");
              }
            }
            if (result20 !== null) {
              var result21 = [];
              var result26 = parse_sp();
              while (result26 !== null) {
                result21.push(result26);
                var result26 = parse_sp();
              }
              if (result21 !== null) {
                if (input.substr(pos, 3) === "...") {
                  var result22 = "...";
                  pos += 3;
                } else {
                  var result22 = null;
                  if (reportMatchFailures) {
                    matchFailed("\"...\"");
                  }
                }
                if (result22 !== null) {
                  var result23 = [];
                  var result25 = parse_sp();
                  while (result25 !== null) {
                    result23.push(result25);
                    var result25 = parse_sp();
                  }
                  if (result23 !== null) {
                    if (input.substr(pos, 1) === ")") {
                      var result24 = ")";
                      pos += 1;
                    } else {
                      var result24 = null;
                      if (reportMatchFailures) {
                        matchFailed("\")\"");
                      }
                    }
                    if (result24 !== null) {
                      var result18 = [result20, result21, result22, result23, result24];
                    } else {
                      var result18 = null;
                      pos = savedPos3;
                    }
                  } else {
                    var result18 = null;
                    pos = savedPos3;
                  }
                } else {
                  var result18 = null;
                  pos = savedPos3;
                }
              } else {
                var result18 = null;
                pos = savedPos3;
              }
            } else {
              var result18 = null;
              pos = savedPos3;
            }
            var result19 = result18 !== null
              ? (function() {
                      return {
                          type: 'argument-declaration-list',
                          args: [], variadic: true
                      };
                  })()
              : null;
            if (result19 !== null) {
              var result17 = result19;
            } else {
              var result17 = null;
              pos = savedPos2;
            }
            if (result17 !== null) {
              var result0 = result17;
            } else {
              var savedPos0 = pos;
              var savedPos1 = pos;
              if (input.substr(pos, 1) === "(") {
                var result4 = "(";
                pos += 1;
              } else {
                var result4 = null;
                if (reportMatchFailures) {
                  matchFailed("\"(\"");
                }
              }
              if (result4 !== null) {
                var result5 = [];
                var result16 = parse_sp();
                while (result16 !== null) {
                  result5.push(result16);
                  var result16 = parse_sp();
                }
                if (result5 !== null) {
                  var result6 = parse_argument_declaration_list_noparens();
                  if (result6 !== null) {
                    var result7 = [];
                    var result15 = parse_sp();
                    while (result15 !== null) {
                      result7.push(result15);
                      var result15 = parse_sp();
                    }
                    if (result7 !== null) {
                      if (input.substr(pos, 1) === ",") {
                        var result8 = ",";
                        pos += 1;
                      } else {
                        var result8 = null;
                        if (reportMatchFailures) {
                          matchFailed("\",\"");
                        }
                      }
                      if (result8 !== null) {
                        var result9 = [];
                        var result14 = parse_sp();
                        while (result14 !== null) {
                          result9.push(result14);
                          var result14 = parse_sp();
                        }
                        if (result9 !== null) {
                          if (input.substr(pos, 3) === "...") {
                            var result10 = "...";
                            pos += 3;
                          } else {
                            var result10 = null;
                            if (reportMatchFailures) {
                              matchFailed("\"...\"");
                            }
                          }
                          if (result10 !== null) {
                            var result11 = [];
                            var result13 = parse_sp();
                            while (result13 !== null) {
                              result11.push(result13);
                              var result13 = parse_sp();
                            }
                            if (result11 !== null) {
                              if (input.substr(pos, 1) === ")") {
                                var result12 = ")";
                                pos += 1;
                              } else {
                                var result12 = null;
                                if (reportMatchFailures) {
                                  matchFailed("\")\"");
                                }
                              }
                              if (result12 !== null) {
                                var result2 = [result4, result5, result6, result7, result8, result9, result10, result11, result12];
                              } else {
                                var result2 = null;
                                pos = savedPos1;
                              }
                            } else {
                              var result2 = null;
                              pos = savedPos1;
                            }
                          } else {
                            var result2 = null;
                            pos = savedPos1;
                          }
                        } else {
                          var result2 = null;
                          pos = savedPos1;
                        }
                      } else {
                        var result2 = null;
                        pos = savedPos1;
                      }
                    } else {
                      var result2 = null;
                      pos = savedPos1;
                    }
                  } else {
                    var result2 = null;
                    pos = savedPos1;
                  }
                } else {
                  var result2 = null;
                  pos = savedPos1;
                }
              } else {
                var result2 = null;
                pos = savedPos1;
              }
              var result3 = result2 !== null
                ? (function(args) {
                        return {
                            type: 'argument-declaration-list',
                            args: args, variadic: true
                        };
                    })(result2[2])
                : null;
              if (result3 !== null) {
                var result1 = result3;
              } else {
                var result1 = null;
                pos = savedPos0;
              }
              if (result1 !== null) {
                var result0 = result1;
              } else {
                var result0 = null;;
              };
            };
          };
        }
        
        
        
        cache[cacheKey] = {
          nextPos: pos,
          result:  result0
        };
        return result0;
      }
      
      function parse_argument_declaration_list_noparens() {
        var cacheKey = 'argument_declaration_list_noparens@' + pos;
        var cachedResult = cache[cacheKey];
        if (cachedResult) {
          pos = cachedResult.nextPos;
          return cachedResult.result;
        }
        
        
        var savedPos0 = pos;
        var savedPos1 = pos;
        var result13 = parse_variable_declaration();
        if (result13 !== null) {
          var result3 = result13;
        } else {
          var result12 = parse_type();
          if (result12 !== null) {
            var result3 = result12;
          } else {
            var result3 = null;;
          };
        }
        if (result3 !== null) {
          var savedPos2 = pos;
          var result6 = [];
          var result11 = parse_sp();
          while (result11 !== null) {
            result6.push(result11);
            var result11 = parse_sp();
          }
          if (result6 !== null) {
            if (input.substr(pos, 1) === ",") {
              var result7 = ",";
              pos += 1;
            } else {
              var result7 = null;
              if (reportMatchFailures) {
                matchFailed("\",\"");
              }
            }
            if (result7 !== null) {
              var result8 = [];
              var result10 = parse_sp();
              while (result10 !== null) {
                result8.push(result10);
                var result10 = parse_sp();
              }
              if (result8 !== null) {
                var result9 = parse_argument_declaration_list_noparens();
                if (result9 !== null) {
                  var result5 = [result6, result7, result8, result9];
                } else {
                  var result5 = null;
                  pos = savedPos2;
                }
              } else {
                var result5 = null;
                pos = savedPos2;
              }
            } else {
              var result5 = null;
              pos = savedPos2;
            }
          } else {
            var result5 = null;
            pos = savedPos2;
          }
          var result4 = result5 !== null ? result5 : '';
          if (result4 !== null) {
            var result1 = [result3, result4];
          } else {
            var result1 = null;
            pos = savedPos1;
          }
        } else {
          var result1 = null;
          pos = savedPos1;
        }
        var result2 = result1 !== null
          ? (function(arg, opt) {
                  var more = opt[3];
          
                  if (more !== undefined)
                  {
                      more.unshift(arg);
                      return more;
                  }
          
                  return [arg];
              })(result1[0], result1[1])
          : null;
        if (result2 !== null) {
          var result0 = result2;
        } else {
          var result0 = null;
          pos = savedPos0;
        }
        
        
        
        cache[cacheKey] = {
          nextPos: pos,
          result:  result0
        };
        return result0;
      }
      
      function parse_argument_declaration() {
        var cacheKey = 'argument_declaration@' + pos;
        var cachedResult = cache[cacheKey];
        if (cachedResult) {
          pos = cachedResult.nextPos;
          return cachedResult.result;
        }
        
        
        var savedPos0 = pos;
        var savedPos1 = pos;
        var result10 = parse_type();
        var result4 = result10 !== null ? result10 : '';
        if (result4 !== null) {
          var savedPos2 = pos;
          var result7 = [];
          var result9 = parse_sp();
          while (result9 !== null) {
            result7.push(result9);
            var result9 = parse_sp();
          }
          if (result7 !== null) {
            var result8 = parse_identifier();
            if (result8 !== null) {
              var result6 = [result7, result8];
            } else {
              var result6 = null;
              pos = savedPos2;
            }
          } else {
            var result6 = null;
            pos = savedPos2;
          }
          var result5 = result6 !== null ? result6 : '';
          if (result5 !== null) {
            var result3 = [result4, result5];
          } else {
            var result3 = null;
            pos = savedPos1;
          }
        } else {
          var result3 = null;
          pos = savedPos1;
        }
        var result1 = result3 !== null ? result3 : '';
        var result2 = result1 !== null
          ? (function(opt) {
                  var type = opt[0];
                  var name = opt[1][1];
          
                  var arg = { type: 'variable-declaration' };
          
                  if (type !== undefined)
                  {
                      arg.vtype = type;
                  }
          
                  if (name !== undefined)
                  {
                      arg.name = name;
                  }
          
                  return arg;
              })(result1)
          : null;
        if (result2 !== null) {
          var result0 = result2;
        } else {
          var result0 = null;
          pos = savedPos0;
        }
        
        
        
        cache[cacheKey] = {
          nextPos: pos,
          result:  result0
        };
        return result0;
      }
      
      function parse_body_statements() {
        var cacheKey = 'body_statements@' + pos;
        var cachedResult = cache[cacheKey];
        if (cachedResult) {
          pos = cachedResult.nextPos;
          return cachedResult.result;
        }
        
        
        var savedPos2 = pos;
        var savedPos3 = pos;
        if (input.substr(pos, 1) === "{") {
          var result14 = "{";
          pos += 1;
        } else {
          var result14 = null;
          if (reportMatchFailures) {
            matchFailed("\"{\"");
          }
        }
        if (result14 !== null) {
          var result15 = [];
          var result17 = parse_sp();
          while (result17 !== null) {
            result15.push(result17);
            var result17 = parse_sp();
          }
          if (result15 !== null) {
            if (input.substr(pos, 1) === "}") {
              var result16 = "}";
              pos += 1;
            } else {
              var result16 = null;
              if (reportMatchFailures) {
                matchFailed("\"}\"");
              }
            }
            if (result16 !== null) {
              var result12 = [result14, result15, result16];
            } else {
              var result12 = null;
              pos = savedPos3;
            }
          } else {
            var result12 = null;
            pos = savedPos3;
          }
        } else {
          var result12 = null;
          pos = savedPos3;
        }
        var result13 = result12 !== null
          ? (function() { return { type: 'body-statements', statements: [] }; })()
          : null;
        if (result13 !== null) {
          var result11 = result13;
        } else {
          var result11 = null;
          pos = savedPos2;
        }
        if (result11 !== null) {
          var result0 = result11;
        } else {
          var savedPos0 = pos;
          var savedPos1 = pos;
          if (input.substr(pos, 1) === "{") {
            var result4 = "{";
            pos += 1;
          } else {
            var result4 = null;
            if (reportMatchFailures) {
              matchFailed("\"{\"");
            }
          }
          if (result4 !== null) {
            var result5 = [];
            var result10 = parse_sp();
            while (result10 !== null) {
              result5.push(result10);
              var result10 = parse_sp();
            }
